--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -5,11 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/frag_second"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:background="@drawable/frag_second" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="EditText" />
+        <TextView
+            android:id="@+id/text_second"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/white"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="left|center"
+            android:autoSizeTextType="uniform"
+            android:textStyle="bold"
+            android:autoSizeMinTextSize="5sp"
+            android:autoSizeMaxTextSize="30sp"
+            android:autoSizeStepGranularity="5sp"
 
+            android:text="소중한 기부금이 어떻게\n쓰일지 더 알고 싶다면?"
+            />
+
+    </FrameLayout>
 </LinearLayout>
