--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/text_third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="EditText" />
