--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,10 +8,8 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vpPager"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:background="#C23433"
-        android:layout_weight="2"
-        />
+        android:layout_height="150dp"
+        android:background="#C23433" />
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/indicator"
@@ -27,25 +24,58 @@
         app:ci_width="50dp" />
 
 
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical"
-
-        >
-
-
-    </LinearLayout>
-
     <fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="312dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
-        android:layout_weight="3"
-        />
+        android:layout_marginBottom="0dp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="176dp"
+        android:layout_height="38dp"
+        android:layout_above="@+id/map"
+        android:layout_below="@+id/vpPager"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="99dp"
+        android:layout_marginEnd="94dp"
+        android:layout_marginBottom="132dp"
+        android:text="지금까지 모인 금액"
+        android:textSize="21"
+        android:textStyle="bold" />
 
-</LinearLayout>
+    <EditText
+        android:id="@+id/editTextNumber"
+        android:layout_width="187dp"
+        android:layout_height="74dp"
+        android:layout_below="@+id/vpPager"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="83dp"
+        android:layout_marginBottom="367dp"
+        android:ems="10"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="126dp"
+        android:layout_height="37dp"
+        android:layout_below="@+id/vpPager"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="145dp"
+        android:layout_marginBottom="500dp"
+        android:ems="10"
+        android:inputType="date" />
+
+</RelativeLayout>
