--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
             />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="left|center"
             android:orientation="vertical">
 
         <TextView
@@ -76,10 +77,16 @@
             android:textSize="40dp"
             android:text="697,450원"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#C23433"
+                android:text="기부하러가기"
+                android:textStyle="bold" />
         </LinearLayout>
 
-
     </LinearLayout>
+
 
     <fragment
         android:id="@+id/map"
@@ -90,6 +97,5 @@
         android:layout_marginBottom="0dp"
         android:layout_weight="3"
         />
-
 
 </LinearLayout>
