--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="0px"
-
         android:layout_weight="2"
         >
 
@@ -38,6 +37,7 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:gravity="center"
+        android:background="@color/white"
         >
 
         <ImageView
@@ -82,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C23433"
                 android:text="기부하러가기"
+                android:textColor="@color/white"
                 android:textStyle="bold" />
         </LinearLayout>
 
