--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/tv1"
+        android:onClick="showWebView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="EditText" />
