--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_width="159dp"
+        android:layout_height="90dp"
+        android:onClick="showWebView2"
         android:text="EditText" />
 
 </LinearLayout>
